# diffusion

./: .aliases  .bazelrc  .cursorignore  .gitignore  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  activate.sh  check_gpu.py  lint.sh  pyproject.toml  requirements.txt  test_keras_install.py
data_utils/: BUILD  __init__.py  gaussian_data.py
models/: BUILD  __init__.py  diffusion.py
scripts/: BUILD  run_diffusion.py  run_diffusion_training.sh
training/: BUILD  __init__.py  train_diffusion.py
